# tree-sitter-confluence

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-confluence_wiki.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_confluence_wiki/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterConfluenceWiki/: confluence_wiki.h
bindings/swift/TreeSitterConfluenceWikiTests/: TreeSitterConfluenceWikiTests.swift
queries/: aerial.scm  highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: blocks.txt  code_blocks.txt  color.txt  headings.txt  inline.txt  lists.txt  tables.txt
