[package]
name = "tree-sitter-confluence-wiki"
description = "Confluence wiki markup"
version = "1.0.0"
authors = ["Fabien Devaux <fdev31@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "confluence-wiki"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/fdev31/tree-sitter-confluence"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
